replaced new instance with valueOf cause of deprecation in java 9 and onwards